[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/PickupEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/pickup/ChickenPickup.gd" type="Script" id=2]

[node name="PickupEntity" instance=ExtResource( 1 )]
scale = Vector2( 1, 1 )
script = ExtResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
